2005-03-09  Sushma Rai  <rsushma@novell.com>
	
	* storage/exchange-account.h: mbox_size definition. Missed in previous
	commit.

2005-03-09  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-global-catalog.c (get_quota_values): Reading "mDBUseDefaults"
	attribute to check if the user level quota settings are enabled or not.
	(e2k_global_catalog_lookup): Added "mDBUseDefaults" attribute to quota
	attribute list.

	* storage/exchange-account.c (setup_account_hierarchies): Reading total
	size for all the personal folders. Not returning "FALSE" in case 
	favorite folders does not exist. Not an error condition.
	(exchange_account_connect): Printing the quota warning, only if user's
	mail box size exceeds the quota limit set. Fixes #72389

	* storage/exchange-hierarchy-webdav.[ch](init): Initializing the total
	folder size.
	(exchange_hierarchy_webdav_get_total_folder_size): Returns total size 
	of all the folders.
	(rescan)(exchange_hierarchy_webdav_get_folder_size): Calculates the 
	total size for all the folders.
	
2005-03-08  Sushma Rai  <rsushma@novell.com>

	* shell/e-folder-misc-dialogs.c (do_foreign_folder_dialog): Removed the
	corba method which was still being used to retrieve user's e-mail
	address.
	(user_clicked): Making name selector dialog modal.
	(setup_name_selector): Adding the user name entry widget to the name
	selector dialog.
	 Fixes #73218

2005-03-07 Sivaiah Nallagatla <snallagatla@novell.com>

	* calendar/e-cal-backend-exchange.c (set_mode) :
	make sure we set proper value to priv->read_only 
	Atleast should Fix #72168 & #72951 

2005-03-07  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_new): Setting the
	porotcol based on OWA URL specified by the user, instead of use_ssl
	parameter. Since we don't have a SSL section now, use_ssl is getting
	lost when user does modifications to his account settings.
	Fixes #73202, #72834, #73017, #72836, and #72881

2005-03-03  Sushma Rai  <rsushma@novell.com>
